# snapsurf

./: .gitignore  ARCHITECTURE.md  CANVAS_SYSTEM.md  CMakeLists.txt  README.md  THEME.md  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
cmake/: FindCEF.cmake
electron/: main.ts  playwright-browser.ts  playwright-mcp.ts  preload.ts
resources/: Info.plist.in
src/: App-dark.css  App-light.css  App-old.tsx  App.css  App.tsx  gemini.ts  index.css  main_mac.mm  playwright-mcp.ts  webview.d.ts
src/app/: BrowserApp.cc  BrowserApp.h
src/browser/: BookmarkStore.cc  BookmarkStore.h  BrowserClient.cc  BrowserClient.h  BrowserWindow.h  BrowserWindow.mm  DownloadService.cc  DownloadService.h  NavigationController.cc  NavigationController.h  TabManager.cc  TabManager.h
src/common/: Types.h
src/components/Automation/: AutomationPanel.tsx  LogsViewer.tsx  index.ts
src/components/Browser/: AddressBar.tsx  NavigationBar.tsx  TabBar.tsx  WebViewContainer.tsx  index.ts
src/components/Canvas/: Canvas.css  CanvasCard.tsx  CanvasWorkspace.tsx  index.ts
src/components/Chat/: ChatMessages.tsx  ChatSidebar.tsx  ModelSelector.tsx  index.ts
src/hooks/: index.ts  useAutomationLogs.ts  useBrowserState.ts  useCanvasManager.ts  useChat.ts  useComputerUse.ts  useTabManager.ts
src/platform/mac/: CEFBridge.h  CEFCoreBridge.mm
src/services/: index.ts
src/services/ai/: OrchestratorService.ts  index.ts
src/services/automation/: AutomationExecutor.ts  ComputerUseExecutor.ts  GeminiActionExecutor.ts  index.ts
src/services/browser/: ScreenshotService.ts  index.ts
src/services/webview/: WebviewExecutor.ts
src/swift/: AppMain.swift  BridgingHeader.h  ContentView.swift
src/types/: ai.ts  automation.ts  browser.ts  canvas.ts  electron.ts  index.ts
src/utils/: index.ts  logger.ts  urlHelper.ts  webviewExecutor.ts
tests/: smoke_checklist.md
